--- a/MultipleStoryboardsApp/Breeds User Story/Interface/Breeds.storyboard
+++ b/MultipleStoryboardsApp/Breeds User Story/Interface/Breeds.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vrc-9p-T2p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vrc-9p-T2p">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--Породы котов-->
@@ -80,7 +80,6 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="reply" id="aAf-jO-km5">
                             <connections>
                                 <action selector="warningButtonClicked:" destination="AlW-aw-Tlq" id="t6r-uM-p8w"/>
-                                <segue destination="AlW-aw-Tlq" kind="push" id="5kh-ZA-9V5"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -138,7 +137,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="Yer-KS-316"/>
-    </inferredMetricsTieBreakers>
 </document>
