--- a/MultipleStoryboardsApp/Photos User Story/Interface/Photos.storyboard
+++ b/MultipleStoryboardsApp/Photos User Story/Interface/Photos.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="pRF-hS-tvI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="pRF-hS-tvI">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--Галерея фоточек-->
@@ -53,6 +53,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Галерея фоточек" id="i3M-gF-1VN"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="typhoonKey" value="photoGalleryViewController"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <segue destination="kvN-Cd-S3O" kind="push" identifier="photoViewSegue" id="DFo-ry-0gO"/>
                     </connections>
@@ -80,6 +83,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Фоточка" id="zuQ-o4-9kG"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="typhoonKey" value="photoViewController"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="photoImageView" destination="hrB-gq-Jgr" id="X7R-d7-875"/>
                     </connections>
